--- a/Pandas/Pandas_info.ipynb
+++ b/Pandas/Pandas_info.ipynb
@@ -744,91 +744,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>country</th>\n",
-       "      <th>population</th>\n",
-       "      <th>square</th>\n",
-       "      <th>density</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Country code</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>KZ</th>\n",
-       "      <td>Kazakhstan</td>\n",
-       "      <td>17.04</td>\n",
-       "      <td>2724902</td>\n",
-       "      <td>6.253436</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RU</th>\n",
-       "      <td>Russia</td>\n",
-       "      <td>143.50</td>\n",
-       "      <td>17125191</td>\n",
-       "      <td>8.379469</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BY</th>\n",
-       "      <td>Belarus</td>\n",
-       "      <td>9.50</td>\n",
-       "      <td>207600</td>\n",
-       "      <td>45.761079</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UA</th>\n",
-       "      <td>Ukraine</td>\n",
-       "      <td>45.50</td>\n",
-       "      <td>603628</td>\n",
-       "      <td>75.377550</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 country  population    square    density\n",
-       "Country code                                             \n",
-       "KZ            Kazakhstan       17.04   2724902   6.253436\n",
-       "RU                Russia      143.50  17125191   8.379469\n",
-       "BY               Belarus        9.50    207600  45.761079\n",
-       "UA               Ukraine       45.50    603628  75.377550"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "df.to_csv('filename.csv')"
+   ]
   },
   {
    "cell_type": "code",
